# crypto-alerts-backend

./: .gitignore  BUG_REPORT.md  README.md  SOLUTION_SUMMARY.md  debug_alert_logic.py  debug_step8.py  download_data.py  example_usage.py  notifications.py  price_monitor.py  pyproject.toml  run_backtest.py  run_comparison.py  run_strategies.py  schema.sql  schemas.py  test_alert_logic.py  test_complete_fix.py  test_complete_system.py  test_continuous_alert_bug.py  test_corrected_fix.py  test_corrected_system.py  test_final_fix.py  test_final_system.py  test_fixed_alert_logic.py  trend_analysis.py
.github/workflows/: price-monitor.yml
config/: .env.example  schema.sql
docs/: BACKTESTING_GUIDE.md  ML_SYSTEM.md  QUICK_START.md  STRATEGY_GUIDE.md
ml_trading_system/: data_collection.py  feature_engineering.py  ml_models.py  ml_predictor.py  requirements.txt  test_ml_system.py  train_pipeline.py
scripts/: get_telegram_chat_id.py  visual_backtesting_system.py  working_visual_backtest.py
src/: alert_system.py  backtester.py  consolidated_visual_backtest.py  data_manager.py  main.py  price_monitor.py  schemas.py  strategies.py  strategy_comparison_report.py  trend_analysis.py
tests/: test_advanced.py  test_backtester.py  test_bollinger.py  test_fibonacci.py  test_setup.py  test_trend.py  verify_trend.py
